--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-6/int08-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-6/int08-6.component.html
@@ -106,7 +106,7 @@
             </thead>
         </table>
         <br>
-        <div class="ui center aligned grid">
+        <div class="ui center aligned grid" *ngIf="searchTB"> 
             <div class="sixteen wide column">
                 <button class="ui mini primary button" (click)="saveData()">
                     <i class="check icon"></i>
