--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop09/cop09-1/cop09-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop09/cop09-1/cop09-1.component.html
@@ -113,3 +113,9 @@
 
 
 <!-- End Modal -->
+
+<!-- onReport -->
+<form id="onReport" method="POST">
+  <input type="hidden" name="dataJson" id="dataJson">
+</form>
+<!-- onReport -->
