--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop09/cop09-2/cop09-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop09/cop09-2/cop09-2.component.html
@@ -53,12 +53,12 @@
       <div class="four wide field ">
         <input type="text" id="product" value="{{dataRecord.product}}">
       </div>
-      <div class="two wide field ">
+      <!-- <div class="two wide field ">
         <label>ความเสี่ยงที่ถูกตรวจสอบ :</label>
       </div>
       <div class="four wide field ">
         <input type="text" id="riskTypeDesc" value="{{dataRecord.riskTypeDesc}}">
-      </div>
+      </div> -->
     </div>
     <div class="inline fields">
       <div class="two wide field"></div>
@@ -320,4 +320,4 @@
 <form  id="onReport" method="POST"> 
   <input type="hidden" name="dataJson" id="dataJson">
 </form>
-<!-- onReport -->
+onReport
