update code cop09-2

--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop09/cop09-2/cop09-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop09/cop09-2/cop09-2.component.html
@@ -320,4 +320,4 @@
 <form  id="onReport" method="POST"> 
   <input type="hidden" name="dataJson" id="dataJson">
 </form>
-onReport
+<!-- onReport -->
