--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010700/tsl010700.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010700/tsl010700.component.html
@@ -1,7 +1,7 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <br />
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-  <span>ตรวจสอบข้อมูลด้านภาษีสรรพาสามิต</span>
+  <span>ตรวจสอบข้อมูลด้านภาษีสรรพสามิต</span>
 </div>
 
 <input type="hidden" id="searchFlag" name="searchFlag">
@@ -311,7 +311,7 @@
     <div class="inline fields">
       <div class="four wide field"></div>
       <div class="two wide field ">
-        <label>ข้อมูลใบกำกับภาษีทั้งหมด: </label>
+        <label>ข้อมูลบัญชีงบดุลทั้งหมด: </label>
       </div>
       <div class="two wide field ">
         <input type="text" name="taxInvoiceNum11">
