--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-7/int08-7.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-7/int08-7.component.html
@@ -177,7 +177,7 @@
       <div class="eight wide column">
         <button class="ui mini yellow button" type="submit">
           <i class="print icon"></i>
-          ส่งออก
+          พิมพ์รายงาน
         </button>
       </div>
     </div>
