--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010700/tsl010700.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010700/tsl010700.component.html
@@ -1,12 +1,12 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <br />
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-  <span>ตรวจสอบข้อมูลด้านภาษีสรรพสามิต</span>
+  <span>ตรวจสอบข้อมูล</span>
 </div>
 
 <input type="hidden" id="searchFlag" name="searchFlag">
 
-<!-- Segment I -->
+<!-- Segment  -->
 <div class="ui attached segment">
   <div class="ui grid center aligned">
     <div class="sixteen wide column">
@@ -108,7 +108,7 @@
     <div class="inline fields">
       <div class="four wide field"></div>
       <div class="two wide field ">
-        <label>ผลการตรวจสอบ :</label>
+        <label>ผลการวิเคราะห์ข้อมูล :</label>
       </div>
     </div>
     <div class="inline fields">
@@ -121,13 +121,13 @@
       <div class="four wide field"></div>
       <div class="two wide field ">
         <div class="ui radio checkbox">
-          <input type="radio" id="resultGetRaw" name="resultGetRaw"  value="ข้อมูลถูกต้อง">
+          <input type="radio" id="resultGetRaw" name="resultGetRaw" [(ngModel)]="obj.resultGetRaw" value="ข้อมูลถูกต้อง">
           <label>ข้อมูลถูกต้อง</label>
         </div>
       </div>
       <div class="two wide field ">
         <div class="ui radio checkbox">
-          <input type="radio" id="resultGetRaw" name="resultGetRaw"  value="ข้อมูลไม่ถูกต้อง">
+          <input type="radio" id="resultGetRaw" name="resultGetRaw"  [(ngModel)]="obj.resultGetRaw" value="ข้อมูลไม่ถูกต้อง">
           <label>ข้อมูลไม่ถูกต้อง</label>
         </div>
       </div>
@@ -164,7 +164,7 @@
     <div class="inline fields">
       <div class="four wide field"></div>
       <div class="two wide field ">
-        <label>ผลการตรวจสอบ :</label>
+        <label>ผลการวิเคราะห์ข้อมูล :</label>
       </div>
     </div>
     <div class="inline fields">
@@ -177,13 +177,13 @@
       <div class="four wide field"></div>
       <div class="two wide field ">
         <div class="ui radio checkbox">
-          <input type="radio" id="resultPayRaw" name="resultPayRaw"  value="ข้อมูลถูกต้อง">
+          <input type="radio" id="resultPayRaw" name="resultPayRaw" [(ngModel)]="obj.resultPayRaw" value="ข้อมูลถูกต้อง">
           <label>ข้อมูลถูกต้อง</label>
         </div>
       </div>
       <div class="two wide field ">
         <div class="ui radio checkbox">
-          <input type="radio" id="resultPayRaw" name="resultPayRaw"  value="ข้อมูลไม่ถูกต้อง">
+          <input type="radio" id="resultPayRaw" name="resultPayRaw" [(ngModel)]="obj.resultPayRaw" value="ข้อมูลไม่ถูกต้อง">
           <label>ข้อมูลไม่ถูกต้อง</label>
         </div>
       </div>
@@ -191,31 +191,37 @@
 
   </div>  
 </div>
+
 <!-- Datatable III -->
 <div class="ui segment" style="width: 100%;">
   <br />
   <div class="ui grid center aligned">
     <div class="sixteen wide column">
-      <h4>ข้อมูลใบสั่งซื้อ</h4>
+      <h4>ข้อมูลการรับสินค้าสำเร็จรูป</h4>
     </div>
   </div>
+  <br>
 
+  <table id="tableReceiveProduct" class="ui small celled table nowrap striped selectable" style="width: 100%;">
+    <thead>
+      <tr>
+        <th style="text-align: center !important;">ลำดับ</th>
+        <th style="text-align: center !important;">รายการสินค้าสำเร็จรูป</th>
+        <th style="text-align: center !important;">หน่วยสินค้า</th>
+        <th style="text-align: center !important;">ยอดคงเหลือยกมา</th>
+        <th style="text-align: center !important;">รับจากการผลิต</th>
+        <th style="text-align: center !important;">รับคืนจากคลังสินค้าฑัณบน</th>
+        <th style="text-align: center !important;">อื่นๆ</th>
+        <th style="text-align: center !important;">รวม</th>
+      </tr>
+    </thead>
+  </table>
   <br />
   <div id="" class="ui form">
     <div class="inline fields">
       <div class="four wide field"></div>
       <div class="two wide field ">
-        <label>ข้อมูลใบสั่งซื้อทั้งหมด :</label>
-      </div>
-      <div class="two wide field ">
-        <input type="text" name="taxInvoiceNum">
-        <label> &nbsp; ฉบับ</label>
-      </div>
-    </div>
-    <div class="inline fields">
-      <div class="four wide field"></div>
-      <div class="two wide field ">
-        <label>ผลการตรวจสอบ :</label>
+        <label>ผลการวิเคราะห์ข้อมูล :</label>
       </div>
     </div>
     <div class="inline fields">
@@ -228,43 +234,52 @@
       <div class="four wide field"></div>
       <div class="two wide field ">
         <div class="ui radio checkbox">
-          <input type="radio" id="receiptInvoiceRaw" name="receiptInvoiceRaw"  value="ข้อมูลถูกต้อง">
+          <input type="radio" id="receiptInvoiceRaw" name="receiptInvoiceRaw" [(ngModel)]="obj.receiptInvoiceRaw" value="ข้อมูลถูกต้อง">
           <label>ข้อมูลถูกต้อง</label>
         </div>
       </div>
       <div class="two wide field ">
         <div class="ui radio checkbox">
-          <input type="radio" id="receiptInvoiceRaw" name="receiptInvoiceRaw"  value="ข้อมูลไม่ถูกต้อง">
+          <input type="radio" id="receiptInvoiceRaw" name="receiptInvoiceRaw" [(ngModel)]="obj.receiptInvoiceRaw" value="ข้อมูลไม่ถูกต้อง">
           <label>ข้อมูลไม่ถูกต้อง</label>
         </div>
       </div>
     </div>
-  </div>  
+  </div>
 </div>
-<!-- Datatable IIII -->
+
+<!-- Datatable IV -->
 <div class="ui segment" style="width: 100%;">
   <br />
   <div class="ui grid center aligned">
     <div class="sixteen wide column">
-      <h4>ข้อมูลใบกำกับภาษี</h4>
+      <h4>ข้อมูลการจ่ายสินค้าสำเร็จรูป</h4>
     </div>
   </div>
+  <br>
+
+  <table id="tablePayProduct" class="ui small celled table nowrap striped selectable" style="width: 100%;">
+    <thead>
+      <tr>
+        <th style="text-align: center !important;">ลำดับ</th>
+        <th style="text-align: center !important;">รายการสินค้าสำเร็จรูป</th>
+        <th style="text-align: center !important;">หน่วยสินค้า</th>
+        <th style="text-align: center !important;">จำหน่ายในประเทศ</th>
+        <th style="text-align: center !important;">จำหน่ายต่างประเทศ</th>
+        <th style="text-align: center !important;">ใช้ในโรงงานอุตสาหกรรม</th>
+        <th style="text-align: center !important;">คลังสินค้าฑัณบน</th>
+        <th style="text-align: center !important;">เสียหาย</th>
+        <th style="text-align: center !important;">อื่นๆ</th>
+        <th style="text-align: center !important;">รวม</th>
+      </tr>
+    </thead>
+  </table>
   <br />
   <div id="" class="ui form">
     <div class="inline fields">
       <div class="four wide field"></div>
       <div class="two wide field ">
-        <label>ข้อมูลใบกำกับภาษีทั้งหมด: </label>
-      </div>
-      <div class="two wide field ">
-        <input type="text" name="taxInvoiceNum">
-        <label> &nbsp; ฉบับ</label>
-      </div>
-    </div>
-    <div class="inline fields">
-      <div class="four wide field"></div>
-      <div class="two wide field ">
-        <label>ผลการตรวจสอบ :</label>
+        <label>ผลการวิเคราะห์ข้อมูล :</label>
       </div>
     </div>
     <div class="inline fields">
@@ -277,82 +292,27 @@
       <div class="four wide field"></div>
       <div class="two wide field ">
         <div class="ui radio checkbox">
-          <input type="radio" id="payInvoiceRaw" name="payInvoiceRaw"  value="ข้อมูลถูกต้อง">
+          <input type="radio" id="payInvoiceRaw" name="payInvoiceRaw" [(ngModel)]="obj.payInvoiceRaw"  value="ข้อมูลถูกต้อง">
           <label>ข้อมูลถูกต้อง</label>
         </div>
       </div>
       <div class="two wide field ">
         <div class="ui radio checkbox">
-          <input type="radio" id="payInvoiceRaw" name="payInvoiceRaw"  value="ข้อมูลไม่ถูกต้อง">
+          <input type="radio" id="payInvoiceRaw" name="payInvoiceRaw" [(ngModel)]="obj.payInvoiceRaw" value="ข้อมูลไม่ถูกต้อง">
           <label>ข้อมูลไม่ถูกต้อง</label>
         </div>
       </div>
-    </div>
-    <br />
-    <div class="ui center aligned grid">
-      <div class="sixteen wide column">
-        <button class="ui primary mini button" (click)="onReport()" >รายงานการตรวจ</button>
-        <button class="ui mini button" type="button" (click)="onClickBack()">ย้อนกลับ</button>
-      </div>
-    </div>
-  </div>  
-</div>
-
-<!-- Datatable IV -->
-<div class="ui segment" style="width: 100%;">
-  <br />
-  <div class="ui grid center aligned">
-    <div class="sixteen wide column">
-      <h4>ข้อมูลบัญชีงบดุล</h4>
     </div>
   </div>
-  <br />
-  <div id="" class="ui form">
-    <div class="inline fields">
-      <div class="four wide field"></div>
-      <div class="two wide field ">
-        <label>ข้อมูลบัญชีงบดุลทั้งหมด: </label>
-      </div>
-      <div class="two wide field ">
-        <input type="text" name="taxInvoiceNum11">
-        <label> &nbsp; ฉบับ</label>
-      </div>
-    </div>
-    <div class="inline fields">
-      <div class="four wide field"></div>
-      <div class="two wide field ">
-        <label>ผลการตรวจสอบ :</label>
-      </div>
-    </div>
-    <div class="inline fields">
-      <div class="four wide field"></div>
-      <div class="eight wide field ">
-        <textarea id="payInvoiceBox11" name="payInvoiceBox11" [(ngModel)]="obj.payInvoiceBox11" maxlength="300" rows="5"></textarea>
-      </div>
-    </div>
-    <div class="inline fields">
-      <div class="four wide field"></div>
-      <div class="two wide field ">
-        <div class="ui radio checkbox">
-          <input type="radio" id="payInvoiceRaw11" name="payInvoiceRaw11"  value="ข้อมูลถูกต้อง">
-          <label>ข้อมูลถูกต้อง</label>
-        </div>
-      </div>
-      <div class="two wide field ">
-        <div class="ui radio checkbox">
-          <input type="radio" id="payInvoiceRaw11" name="payInvoiceRaw11"  value="ข้อมูลไม่ถูกต้อง">
-          <label>ข้อมูลไม่ถูกต้อง</label>
-        </div>
-      </div>
-    </div>
-    <br />
+
+  <div class="inline field">
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-        <button class="ui primary mini button" (click)="onReport()" >รายงานการตรวจ</button>
+        <button class="ui primary mini button" (click)="onReport()">รายงานการตรวจ</button>
         <button class="ui mini button" type="button" (click)="onClickBack()">ย้อนกลับ</button>
       </div>
     </div>
-  </div>  
+  </div>
 </div>
 
 <!-- onReport -->
