--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-14/int06-14.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-14/int06-14.component.html
@@ -2,7 +2,7 @@
 <br>
 
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-    <span>ตรวจสอบจำนวนครั้งในการเบิก</span>
+    <span>รายละเอียดการตรวจสอบจำนวนครั้งในการเบิก</span>
 </div>
 <form [formGroup]="searchForm" (submit)="handleSearch($event)">
     <div class="ui attached segment">
