--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-15/int06-15.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-15/int06-15.component.html
@@ -2,7 +2,7 @@
 <br>
 
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-  <span>ตรวจสอบจำนวนเงินที่เบิกเกิน (ครั้ง/เดือน)</span>
+  <span>รายละเอียดการตรวจสอบจำนวนเงินที่เบิกเกิน (ครั้ง/เดือน)</span>
 </div>
 <form [formGroup]="formControl" >
   <div class="ui attached segment">
