--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-14/int06-14.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-14/int06-14.component.html
@@ -1,10 +1,11 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <br>
 
-<div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-    <span>รายละเอียดการตรวจสอบจำนวนครั้งในการเบิก</span>
-</div>
+
 <form [formGroup]="searchForm" (submit)="handleSearch($event)">
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+        <span>รายละเอียดการตรวจสอบจำนวนครั้งในการเบิก</span>
+    </div>
     <div class="ui attached segment">
         <br>
         <div class="ui form">
@@ -92,34 +93,40 @@
                 </div>
 
 
-                <div class="ui segment">
-                    <table id="dataTable" class="ui small celled table striped selectable" style="width: 100%;">
-                        <thead>
-                            <tr class="text-center">
-                                <th>
-                                    <div class="ui checkbox"> <input id="checkAll" type="checkbox" (click)="clickCheckAll($event)"><label></label></div>
-                                </th>
-                                <th>ลำดับที่</th>
-                                <th>ชื่อผู้เบิก</th>
-                                <th>รายการเบิก</th>
-                                <th>จำนวนครั้งที่เบิก</th>
-                            </tr>
 
-                        </thead>
-                    </table>
 
-                    <div class="ui center aligned grid" style="margin-top: 20px;">
-                        <div class="sixteen wide column">
-                            <button class="ui mini primary button" type="button" (click)="save($event)">
-                                <i class="check icon"></i>เลือกรายการ
-                            </button>
-                            <button class="ui mini yellow button" type="button" >
-                                <i class="print plane icon"></i> ส่งออกไฟล์ Excel
-                            </button>
-                        </div>
-                    </div>
-                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+        <span>ผลการค้นหา การตรวจสอบจำนวนครั้งในการเบิก</span>
+    </div>
+    <div class="ui attached segment">
+        <table id="dataTable" class="ui small celled table striped selectable" style="width: 100%;">
+            <thead>
+                <tr class="text-center">
+                    <th>
+                        <div class="ui checkbox"> <input id="checkAll" type="checkbox" (click)="clickCheckAll($event)"><label></label></div>
+                    </th>
+                    <th>ลำดับที่</th>
+                    <th>ชื่อผู้เบิก</th>
+                    <th>รายการเบิก</th>
+                    <th>จำนวนครั้งที่เบิก</th>
+                </tr>
 
+            </thead>
+        </table>
+
+        <div class="ui center aligned grid" style="margin-top: 20px;">
+            <div class="sixteen wide column">
+                <button class="ui mini primary button" type="button" (click)="save($event)">
+                    <i class="check icon"></i>เลือกรายการ
+                </button>
+                <button class="ui mini yellow button" type="button">
+                    <i class="print plane icon"></i> ส่งออกไฟล์ Excel
+                </button>
             </div>
         </div>
     </div>
