--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-6/int08-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-6/int08-6.component.html
@@ -108,7 +108,7 @@
         <br>
         <div class="ui center aligned grid" *ngIf="searchTB"> 
             <div class="sixteen wide column">
-                <button class="ui mini primary button" (click)="saveData()">
+                <button class="ui mini primary button" (click)="saveCheckbox($event)">
                     <i class="check icon"></i>
                     เลือกรายการ
                 </button>
