--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-7/int08-7.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-7/int08-7.component.html
@@ -29,14 +29,16 @@
     <table id="dataTable2" class="ui small celled table nowrap striped selectable" style="width: 100%">
         <thead>
             <tr>
-                <th class="text-center">ลำดับที่</th>
-                <th class="text-center">เลขที่ใบเสร็จ</th>
-                <th class="text-center">วันที่จัดเก็บ</th>
-                <th class="text-center">วันที่นำฝาก</th>
-                <th class="text-center">เงินจัดเก็บ</th>
-                <th class="text-center">เงินนำฝาก</th>
-                <th class="text-center">สถานะการตรวจวันที่</th>
-                <th class="text-center">สถานะการตรวจจำนวนเงิน</th>
+              <th class="text-center">ลำดับที่</th>
+              <th class="text-center">บัญชี</th>
+              <th class="text-center">เลขที่ใบเสร็จ</th>
+              <th class="text-center">วันที่ใบเสร็จ</th>
+              <th class="text-center">วันที่จัดเก็บ (วันที่รับรู้รายได้)</th>
+              <th class="text-center">วันที่นำฝาก</th>
+              <th class="text-center">เงินจัดเก็บ</th>
+              <th class="text-center">เงินนำฝาก</th>
+              <th class="text-center">สถานะการตรวจวันที่</th>
+              <th class="text-center">สถานะการตรวจจำนวนเงิน</th>
             </tr>
         </thead>
     </table>
