--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010700/tsl010700.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010700/tsl010700.component.html
@@ -308,7 +308,7 @@
   <div class="inline field">
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-        <button class="ui primary mini button" (click)="onReport()">รายงานการตรวจ</button>
+        <button class="ui primary mini button" (click)="onReport()">รายงานผลการวิเคราะห์ข้อมูล</button>
         <button class="ui mini button" type="button" (click)="onClickBack()">ย้อนกลับ</button>
       </div>
     </div>
