--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010600/tsl010600.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010600/tsl010600.component.html
@@ -49,3 +49,9 @@
     </div>
   </div>
 </div>
+
+<!-- onReport -->
+<form id="onReport" method="POST">
+  <input type="hidden" name="dataJson" id="dataJson">
+</form>
+<!-- onReport -->
